<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity" >

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:text="@string/sign_up_button_label" />

</RelativeLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:background="@color/bg_register"-->
    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="10dp" >-->

    <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:orientation="vertical"-->
        <!--android:paddingLeft="20dp"-->
        <!--android:paddingRight="20dp" >-->

        <!--<EditText-->
            <!--android:id="@+id/name"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:background="@color/input_register_bg"-->
            <!--android:hint="@string/hint_name"-->
            <!--android:padding="10dp"-->
            <!--android:singleLine="true"-->
            <!--android:inputType="textCapWords"-->
            <!--android:textColor="@color/input_register"-->
            <!--android:textColorHint="@color/input_register_hint" />-->

        <!--<EditText-->
            <!--android:id="@+id/email"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:background="@color/input_register_bg"-->
            <!--android:hint="@string/hint_email"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:padding="10dp"-->
            <!--android:singleLine="true"-->
            <!--android:textColor="@color/input_register"-->
            <!--android:textColorHint="@color/input_register_hint" />-->

        <!--<EditText-->
            <!--android:id="@+id/password"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:background="@color/input_register_bg"-->
            <!--android:hint="@string/hint_password"-->
            <!--android:inputType="textPassword"-->
            <!--android:padding="10dp"-->
            <!--android:singleLine="true"-->
            <!--android:textColor="@color/input_register"-->
            <!--android:textColorHint="@color/input_register_hint" />-->

        <!--&lt;!&ndash; Login Button &ndash;&gt;-->

        <!--<Button-->
            <!--android:id="@+id/btnRegister"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dip"-->
            <!--android:background="#ea4c88"-->
            <!--android:text="@string/btn_register"-->
            <!--android:textColor="@color/white" />-->

        <!--&lt;!&ndash; Link to Login Screen &ndash;&gt;-->

        <!--<Button-->
            <!--android:id="@+id/btnLinkToLoginScreen"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="40dip"-->
            <!--android:background="@null"-->
            <!--android:text="@string/btn_link_to_login"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="15dp" />-->
    <!--</LinearLayout>-->

<!--</LinearLayout>-->