<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textStyle="italic"
                android:text="Which best describes your diet?"/>

            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dp"-->
                <!--android:layout_weight=".8"-->
                <!--android:id="@+id/diet_rv"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp">

                <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/vegetarian_radiobutton"
                    android:layout_gravity="center_vertical"
                    android:tag="vegetarian"
                    android:onClick="onRadioButtonClicked"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:paddingBottom="5dp"
                        android:text="Vegetarian"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegetarian_hint"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp">

                <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/vegan_radiobutton"
                    android:layout_gravity="center_vertical"
                    android:tag="vegan"
                    android:onClick="onRadioButtonClicked"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:paddingBottom="5dp"
                        android:text="Vegan"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegan_hint"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp">

                <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/pesc_radiobutton"
                    android:layout_gravity="center_vertical"
                    android:tag="pescatarian"
                    android:onClick="onRadioButtonClicked"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:paddingBottom="5dp"
                        android:text="Pescetarian"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pescetarian_hint"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp">

                <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/none_radiobutton"
                    android:layout_gravity="center_vertical"
                    android:tag="none"
                    android:onClick="onRadioButtonClicked"/>

                <TextView
                    android:id="@+id/diet_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="25dp"
                    android:text="None"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:layout_marginTop="10dp"
        card_view:cardCornerRadius="4dp"
        android:paddingLeft="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gf_checkbox"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="Gluten-Free"
                android:paddingLeft="15dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/diet_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:background="@color/colorAccent"
        android:textColor="#FFFFFF"
        android:layout_gravity="center" />

</LinearLayout>
